[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "pybind11",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.args = [
    "-DCMAKE_BUILD_TYPE=Release",
    "-DTINYGPT_BUILD_PYBINDING=ON"
]

[project]
name = "tinygpt"
version = "0.0.1"
description = "TinyGPT"
authors = [
    { name = "keith2018", email = "keith@robot9.me" }
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["tinygpt", "tokenizer"]
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/keith2018/TinyGPT"
Repository = "https://github.com/keith2018/TinyGPT.git"
BugTracker = "https://github.com/keith2018/TinyGPT/issues"
